more translation. JPAGE_CURRENT_OF_TOTAL=Página %s de %s

--- a/pt-BR/pt-BR.ini
+++ b/pt-BR/pt-BR.ini
@@ -187,6 +187,7 @@ IF DIFFICULTIES PERSIST, PLEASE CONTACT THE SYSTEM ADMINISTRATOR OF THIS SITE.=S
 IMAGE=Imagem
 ITEMS=itens
 JOOMLA WARNING=<font color="red">Aviso do Joomla!</font>
+JPAGE_CURRENT_OF_TOTAL=Página %s de %s
 LAST=último
 LAST UPDATED=Última atualização
 LAST_UPDATED2=Última atualização em %s
